<resources>
    <string name="app_name">Programming Quiz App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="category">Category</string>
    <string name="level">Level</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="restart">Restart</string>
    <string name="home">Home</string>
    <string name="score">Score</string>
    <string name="history">History</string>
    <string name="no_account">Don\'t have an account? Register</string>
    <string name="has_account">Already have an account? Login</string>
</resources>